--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
         <div class="center-box">
             <div class="content">
                 <h1>Rekening</h1>
-                <p id="rekening">
-                    no order
-                </p>
+                <div class="headerSpans">
+                    <span>Name:</span><span>Amount</span><span>Price</span>
+                </div>
+                <hr>
+                <div id="rekening">
+                 
+                </div>
             </div>
         </div>
     </div>
+    <script src="products.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
