--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <div id="rekening">
                  
                 </div>
+                <hr>
+                <div id="totaal">
+                    <h4>Totaal:</h4>
+                </div>
             </div>
         </div>
     </div>
